# peexcel

./: .gitignore  CHANGELOG.md  Excel-Anpassungen.exportedUI  Falsch.xlsx  META.xlsx  META_name_value.xlsx  README.md  calctree.json  calctree_grouped.json  fullsavewithprofiles.csv  index.md  pyproject.toml  setup.py  test.md  test2.md  test_token.xlsx
Analysis/: Sector_Analysis_energiemosiak.ipynb  Varianten_Analyse.ipynb  Varianten_Analyse_PEC.ipynb  ZQ_Austria.ipynb  klimaaktiv.ipynb  sample_points.ipynb
Excel Files/: Netzdienlichkeit_effFaktoren.xlsx
PEQ CHEQ/: Anmerkung Excel Tool.docx  Exchange.xlsx  Grobabschätzung_Neubau_11.xlsm  PEQ_CHEQ.xlsm  PEQ_Check_MockUp.xlsx  PEQ_Mockup_210414.xlsx
data/: Mobilitätsauswertung.xlsx  PEQ_Mockup_210118.xlsx  Variablennamen.xlsx  ka_IN.CSV  save.csv  test.xlsx  test2.csv  test_autofill.xlsm  test_token2.xlsx
docs/: 210514_Peexcel_Netzdienlichkeit Regelung Zielfunktion Dokumentation.docx  PlusenergieExcel_Performance_NamenErgebnisblatt.xlsx  ~$klimaaktiv PEQ-Tool Dokumentation.pptx  ÄnderungenPlusenergieexcel20201208.docx  ÄnderungsvermerkePEQ_Excel20201223.docx
env/: environment.yaml
notebooks/: Klimsta_Abschluss.ipynb  Varianten_Analyse.ipynb  Varianten_Analyse_PEC.ipynb  ZW_Dashboard.ipynb  dev.ipynb  howto_baubook_io.ipynb  howto_excel.ipynb  howto_schema.ipynb  kurven_parametrisierung.ipynb  schema_dev.ipynb  validate.ipynb
peexcel/: Base.xlsx  FragenZQ_A_20211011 (00000002).docx  Project_Export.xlsx  Taxonomy.xlsx  customUI14.xml  customUI14_3_25.xml  (+2 more)
peexcel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+211 files in other folders)
